@startuml

namespace framework {
      abstract class framework.ComparableCollection {
          - capacite : int
          - tabComparable : Comparable[]
          + add()
          + first()
          + isEmpty()
          + iterator()
          + last()
          + remove()
          + trier()
      }
    }

    namespace framework {
          class framework.Jeu {
              - des : ComparableCollection
              - players : ComparableCollection
              -playerActif: Comparable
          }
        }

framework.Jeu o-- framework.ComparableCollection
java.lang.Comparable --o framework.ComparableCollection

right footer

end footer

@enduml
